--- a/estilos.css
+++ b/estilos.css
@@ -7,6 +7,16 @@ header{
     margin: 0 auto;
     height: 500px;
 }
+#logo{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+}
+
+#login{
+    padding-top:10px; 
+}
+
 #nav{
     background-color: ghostwhite;
 }
