--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,6 @@
+body{
+/*     background-color: rgba(10,10,10,0.1) */
+}
 header{
     background: url(img/limp.png);
     background-size: 800px; 
@@ -19,6 +22,10 @@ header{
 
 #nav{
     background-color: ghostwhite;
+}
+
+#productos{
+    margin-top: 50px;
 }
 
 #buscadorArticulos{
